# Pie-Lang-Fork-derk

./: .gitignore  CMakeLists.txt  Declarations.hxx  Makefile  README.md  fib.pie  main.cc  spec.md  test.pie  testing.c  testing.dylib
.github/workflows/: cpp.yml  release.yml
Analysis/: ExprContains.hxx  LexicalScoping.hxx
ExpVM/: ByteCode.hxx  Cherry.hxx  Compiler.cxx  Compiler.hxx  Environment.cxx  Environment.hxx  FastValue.hxx  Functions.cxx  Functions.hxx
Expr/: Expr.hxx
Interp/: BuiltinFunctions.hxx  FFI.hxx  Interpreter.hxx
Lex/: Lexer.hxx  Token.hxx
Parser/: ExprContains.hxx  Parser.hxx
Preprocessor/: Preprocessor.hxx
Tests/: Test.cc  TestSuite.hxx  dylib  ffi_test.cpp  module.pie
Type/: Type.cxx  Type.hxx
Utils/: CLI.hxx  CherryCLI.hxx  ConstexprLookup.hxx  utils.hxx
VM/: ByteCode.hxx  Cherry.cxx  Cherry.hxx  Compiler.cxx  Compiler.hxx  Environment.cxx  Environment.hxx  FastValue.hxx  Functions.cxx  Functions.hxx
Value/: Value.cxx  Value.hxx
docs/: README.md  cherry.md  spec.md
examples/: all.pie  basics.pie  builtins.pie  classes.pie  collections.pie  concepts.pie  folds.pie  functions.pie  hello.pie  lists_maps.pie  loops.pie  match.pie  namespaces.pie  operators.pie  packs.pie  recursion.pie  types.pie  unions.pie
src/: Declarations.hxx  main.cc
src/Analysis/: ExprContains.hxx  LexicalScoping.cxx  LexicalScoping.hxx
src/Interp/: BuiltinFunctions.hxx  FFI.hxx  Interpreter.hxx
src/Lex/: Lexer.cxx  Lexer.hxx  Token.hxx
src/Parser/: Parser.hxx
src/Preprocessor/: Preprocessor.cxx  Preprocessor.hxx
src/Type/: Type.cxx  Type.hxx
src/Utils/: CLI.cxx  CLI.hxx  Exceptions.hxx  utils.cxx  utils.hxx
src/Value/: Value.cxx  Value.hxx
std/: ffi.pie  std.pie
